@@ -43,6 +43,10 @@
     <li><a href="tags-xmp-MicrosoftPhoto.html"><span>MicrosoftPhoto</span></a></li>
     <li><a href="tags-xmp-mediapro.html"><span>mediapro</span></a></li>
     <li><a href="tags-xmp-expressionmedia.html"><span>expressionmedia</span></a></li>
+    <li><a href="tags-xmp-MP.html"><span>MP</span></a></li>
+    <li><a href="tags-xmp-MPRI.html"><span>MPRI</span></a></li>
+    <li><a href="tags-xmp-MPReg.html"><span>MPReg</span></a></li>
+    <li><a href="tags-xmp-mwg-rs.html"><span>mwg-rs</span></a></li>
   </ul>
 </div>
 
